# aeonetica

./: .gitignore  .gitmodules  LICENSE  build.py  win_ter_setup.py
client/: Cargo.toml  build.py  build.rs
client/assets/: default-shader.glsl  flat-color-shader.glsl  flat-texture-shader.glsl  test_shader.glsl
client/runtime/: coremod.hash
client/src/: client.rs  client_runtime.rs  context.rs  data_store.rs  lib.rs  main.rs  messaging.rs
client/src/events/: key.rs  mod.rs  mouse.rs  window.rs
client/src/layers/: mod.rs
client/src/networking/: messaging.rs  mod.rs  protocol.rs
client/src/renderer/: batch.rs  buffer.rs  context.rs  font.rs  framebuffer.rs  glerror.rs  layer.rs  mod.rs  pipeline.rs  postprocessing.rs  quad.rs  shader.rs  sprite_sheet.rs  target.rs  text_area.rs  texture.rs  util.rs  vertex_array.rs
client/src/renderer/buffer/: framebuffer.rs  mod.rs  renderbuffer.rs  vertex_array.rs
client/src/renderer/builtin/: line.rs  mod.rs  particle.rs  quad.rs  text_area.rs
client/src/renderer/material/: mod.rs
client/src/renderer/shader/: data_type.rs  mod.rs  postprocessing.rs  (+1 more)
client/src/window/: mod.rs
mods/testmod/: Cargo.toml  legacy_build.sh
mods/testmod/assets/: aeonetica_font.bmf  postprocessing_shader.glsl  test_shader.glsl  test_texture_shader.glsl
mods/testmod/src/: client.rs  common_client.rs  lib.rs  server.rs
mods/world/: Cargo.toml
mods/world/assets/: glow-shader.glsl  terrain-shader.glsl  water-shader.glsl  world-shader.glsl  world_shader.glsl
mods/world/src/: client.rs  common.rs  lib.rs  server.rs  tiles.rs
(+119 files in other folders)
