[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
aeonetica_engine = { package="engine", path="../engine" }
aeonetica_server = { package="server", path="../server" }

glfw = "0.51.0"
gl = "0.14.0"
regex = "1.7.1"
image = "0.24.5"
lazy_static = "1.4.0"

[features]
# default = ["gpu_debug"]
gpu_debug = []