[package]
name = "testmod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[features]
client = []
server = []

[dependencies]
aeonetica_engine = { package="engine", path="../../engine" }
aeonetica_client = { package="client", path="../../client" }
aeonetica_server = { package="server", path="../../server" }