[package]
name = "world"
version = "0.1.0"
edition = "2021"

[features]
client = []
server = []

[dependencies]
aeonetica_engine = { package="engine", path="../../engine" }
aeonetica_client = { package="client", path="../../client" }
aeonetica_server = { package="server", path="../../server" }

rand = "0.8.5"